# better-ustc-2

./: .cz-config.json  .czrc  CHANGELOG.md  LICENSE  README.md  commitlint.config.cjs  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml  test.yml
.husky/: commit-msg
docs/: backend.md  development.md  frontend.md  login.md  project_report.md  spider.md
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: i.icns  icon.icns
src-tauri/src/: auth.rs  lib.rs  main.rs  recommend.rs  security.rs  state.rs
src-tauri/src/rustustc/: mod.rs  url.rs
src-tauri/src/rustustc/cas/: client.rs  info.rs  mod.rs
src-tauri/src/rustustc/young/: mod.rs  model.rs  service.rs
src-tauri/tests/: login_test.rs  offline_model_test.rs  young_test.rs
src/components/: ActivityCard.vue
src/router/: index.ts
src/stores/: activity.ts  logs.ts  user.ts
src/views/: AboutView.vue  ActivityDetailView.vue  HomeView.vue  LogView.vue  ProfileView.vue  RegisteredView.vue
