[package]
name = "better-ustc-2"
version = "0.1.2"
description = "A mobile program which imporve the experience of 青春科大（二课）"
authors = ["Chen Xin", "Fan Yibohan", "Zhou Yingcheng"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "better_ustc_2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1.10"
base64 = "0.21"
aes = "0.8"
ecb = "0.1"
anyhow = "1.0"
url = "2.5"
tauri-plugin-http = "2"
reqwest_cookie_store = "0.8"
chrono = { version = "0.4", features = ["serde"] }
cbc = "0.1"
block-padding = "0.3"
hex = "0.4"
async-trait = "0.1"
tauri-plugin-store = "2"
tauri-plugin-machine-uid = "0.1.2"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
jieba-rs = "0.6"
once_cell = "1.21.3"
ammonia = "4.1.2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"

[dev-dependencies]
dotenv = "0.15"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

